Build your own AI (persona)

--- a/template/home.html
+++ b/template/home.html
@@ -135,7 +135,8 @@
       <ul class="mt-4">
         <li class="mb-4 px-4 py-2 rounded hover:bg-purple-600 cursor-pointer">Home</li>
         <li class="mb-4 px-4 py-2 rounded hover:bg-purple-600 cursor-pointer"><a href="{% url 'chattoai' %}">Chat to AI</a></li>
-        
+        <li class="mb-4 px-4 py-2 rounded hover:bg-purple-600 cursor-pointer"><a href="{% url 'builtownai' %}">Build Own AI</a></li>
+        <li class="mb-4 px-4 py-2 rounded hover:bg-purple-600 cursor-pointer"><a href="{% url 'aboutus' %}">About US</a></li>
       </ul>
     </div>
     <div class="logout-btn text-lg text-purple-400" onclick="handleAuthClick()" id="auth-button">Sign In</div>
