--- a/template/home.html
+++ b/template/home.html
@@ -131,8 +131,8 @@
   <div id="sidebar" class="sidebar bg-black text-white w-64 flex flex-col justify-between shadow-lg">
     <div class="p-6">
       <img src="https://i.pravatar.cc/100" alt="User Profile" class="rounded-full w-20 h-20 mx-auto mb-4 border-4 border-purple-400" />
-      {% if user.is_authenticated %}
-        <h2 id="username-display" class="text-xl font-semibold text-center">Welcome, {{ user.uname }} </h2>
+      {% if is_logged_in %}
+        <h2 id="username-display" class="text-xl font-semibold text-center">Welcome, {{ user_email}} </h2>
       {% else %}
         <h2 id="username-display" class="text-xl font-semibold text-center">Welcome, Guest</h2>
       {% endif %}
@@ -144,7 +144,14 @@
         <li class="mb-4 px-4 py-2 rounded hover:bg-purple-600 cursor-pointer"><a href="{% url 'aboutus' %}">About US</a></li>
       </ul>
     </div>
-    <div class="logout-btn text-lg text-purple-400" onclick="handleAuthClick()" id="auth-button">Sign In</div>
+    {% if is_logged_in %}
+        <!-- <p>Welcome, {{ user_email }}!</p> -->
+        <div class="logout-btn text-lg text-purple-400" onclick="handleAuthClick()" id="auth-button">Log Out</div>
+        <!-- <a href="{% url 'logout' %}">Logout</a> -->
+    {% else %}
+      <div class="logout-btn text-lg text-purple-400" onclick="handleAuthClick()" id="auth-button">Sign In</div>
+    {% endif %}
+    
   </div>
 
   <!-- Main Content -->
