Implement the rag feature

--- a/template/home.html
+++ b/template/home.html
@@ -139,7 +139,7 @@
       <ul class="mt-4">
         <li class="mb-4 px-4 py-2 rounded hover:bg-purple-600 cursor-pointer">Home</li>
         <li class="mb-4 px-4 py-2 rounded hover:bg-purple-600 cursor-pointer"><a href="{% url 'chattoai' %}">Chat to AI</a></li>
-        <li class="mb-4 px-4 py-2 rounded hover:bg-purple-600 cursor-pointer"><a href="{% url 'builtownai' %}">Build Own AI</a></li>
+        <li class="mb-4 px-4 py-2 rounded hover:bg-purple-600 cursor-pointer"><a href="{% url 'aboutinfo' %}">Build Own AI</a></li>
         <li class="mb-4 px-4 py-2 rounded hover:bg-purple-600 cursor-pointer"><a href="{% url 'chattopdf' %}">Chat to PDF</a></li>
         <li class="mb-4 px-4 py-2 rounded hover:bg-purple-600 cursor-pointer"><a href="{% url 'aboutus' %}">About US</a></li>
       </ul>
