Setting page added

--- a/template/aboutus.html
+++ b/template/aboutus.html
@@ -55,13 +55,16 @@
   <div class="shape" style="bottom: 20%; right: 15%; width: 150px; height: 150px;"></div>
   <div class="shape ellipse" style="top: 40%; left: 60%; width: 120px; height: 80px;"></div>
 
+  <a href="{% url 'home' %}" class="fixed top-4 left-4 z-50 bg-gradient-to-r from-purple-500 via-pink-500 to-cyan-500 text-white font-bold py-2 px-6 rounded-full shadow-lg hover:shadow-pink-500 transition duration-300">
+        ← Back to Home
+  </a>
   <!-- Main Content -->
   <div class="max-w-5xl mx-auto text-center relative z-10">
 
     <!-- About -->
     <h1 class="text-5xl font-extrabold mb-6 soft-glow-text">Buddy AI</h1>
     <p class="text-lg text-gray-300 leading-relaxed">
-      <span class="text-purple-400 font-semibold">Talk to PDF</span> is an intelligent AI-powered assistant that lets you
+      <span class="text-purple-400 font-semibold">Talk to AI, Built own AI, And PDF</span> is an intelligent AI-powered assistant that lets you
       directly communicate with your PDF documents. Whether it's summarizing, extracting data, or answering questions from your files —
       everything is made simple and smart.
     </p>
