--- a/template/home.html
+++ b/template/home.html
@@ -142,6 +142,8 @@
         <li class="mb-4 px-4 py-2 rounded hover:bg-purple-600 cursor-pointer"><a href="{% url 'aboutinfo' %}">Build Own AI</a></li>
         <li class="mb-4 px-4 py-2 rounded hover:bg-purple-600 cursor-pointer"><a href="{% url 'chattopdf' %}">Chat to PDF</a></li>
         <li class="mb-4 px-4 py-2 rounded hover:bg-purple-600 cursor-pointer"><a href="{% url 'aboutus' %}">About US</a></li>
+
+        <li class="mb-4 px-4 py-2 rounded hover:bg-purple-600 cursor-pointer"><a href="{% url 'setting' %}">Setting</a></li>
       </ul>
     </div>
     {% if is_logged_in %}
