--- a/template/home.html
+++ b/template/home.html
@@ -130,7 +130,7 @@
   <!-- Sidebar -->
   <div id="sidebar" class="sidebar bg-black text-white w-64 flex flex-col justify-between shadow-lg">
     <div class="p-6">
-      <img src="https://i.pravatar.cc/100" alt="User Profile" class="rounded-full w-20 h-20 mx-auto mb-4 border-4 border-purple-400" />
+      <img src="/media/profile_pic/{{profile_picture}}" alt="User Profile" class="rounded-full w-20 h-20 mx-auto mb-4 border-4 border-purple-400" />
       {% if is_logged_in %}
         <h2 id="username-display" class="text-xl font-semibold text-center">Welcome, {{ user_email}} </h2>
       {% else %}
